ci: Setup Sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=go-project
+sonar.projectKey=xXHachimanXx_sonarcloud-go
+sonar.organization=xxhachimanxx
  
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=.
